fixed width overflow and dropdown margin

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 	--amber-color: #882308;
 	--blue-color: #a9d2ef;
 	--pink-color: #dfc488;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 400px) {
@@ -31,7 +33,7 @@ body {
 .sticky {
 	position: fixed;
 	top: 0;
-	width: 100vw;
+	width: 100%;
 	z-index: 899;
 }
 
@@ -40,8 +42,9 @@ body {
 	font-size: 1rem;
   overflow: hidden;
   background-color: #333;
-	grid-template-columns: auto auto auto 35vw;
+	grid-template-columns: auto auto auto 32vw;
 	display: grid;
+  max-width: 100vw;
 }
 .topnav a {
   float: left;
@@ -68,11 +71,12 @@ body {
 	position: relative;
 	z-index: 0;
 	min-height: 100vh;
-	padding-left: 5em;
-	padding-right: 5em;
+	padding-left: 2em;
+	padding-right: 2em;
 	padding-bottom: 5em;
 	display: flex;
 	flex-wrap: wrap;
+  overflow-x: hidden;
 
 	/*
 	top: auto;
@@ -197,7 +201,7 @@ body {
   position: absolute;
   width:96%;
   padding-bottom: 110.851%; /* =  width / sin(60) */
-  margin:0 2%;
+  margin:0 auto;
   overflow: hidden;
   visibility: hidden;
   outline:1px solid transparent; /* fix for jagged edges in FF on hover transition */
@@ -249,8 +253,8 @@ body {
   padding-top:50%;
   font-size: 1.5em;
   z-index: 1;
-  /* margin-block-start: 0px;
-  margin-block-end: 0; */
+  margin-block-start: 0px;
+  margin-block-end: 0px;
   -webkit-transform:translate3d(0,-100%,0);
       -ms-transform:translate3d(0,-100%,0);
           transform:translate3d(0,-100%,0);
@@ -266,8 +270,8 @@ body {
 }
 .hex p {
   top: 50%;
-  /* margin-block-start: 0px;
-  margin-block-end: 0; */
+  margin-block-start: 0px;
+  margin-block-end: 0px;
   height:auto;
   padding-bottom:50%;
   -webkit-transform:translate3d(0,100%,0);
